--- a/frontend-web/src/pages/Home/style.css
+++ b/frontend-web/src/pages/Home/style.css
@@ -1,31 +1,47 @@
-.home-container{
-    text-align: center;
-    padding: 20px;
-    font-size: 18px;
-    border: 1px solid blue;
+.home-container {
+  text-align: center;
+  padding: 12px;
+  font-size: 18px;
+  border: 1px solid blue;
 }
 
-.home-card{
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 25);
-    border-radius: 20px;
-    background-color: #FFFFFF;
-    border: 1px solid red;
+.home-card {
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 25);
+  border-radius: 20px;
+  background-color: #ffffff;
+  border: 1px solid red;
+
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .home-content-container {
-    border: 1px solid blueviolet;
+  border: 1px solid blueviolet;
+  padding: 10px 10px 58px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home-content-container p {
+  margin-bottom: 30px;
+  font-size: 0.7em;
+  width: 260px;
+  color: #9e9e9e;
 }
 
 .home-content-container h1 {
-    font-size: 1em;
+  margin-bottom: 15px;
+  font-size: 1em;
+  width: 260px;
 }
 
-.home-image-container{
-    padding: 0 15px;
-    border: 1px solid brown;
+.home-image-container {
+  padding: 50 15px;
+  border: 1px solid brown;
 }
 
-.home-image-container svg{
-    width: 100%;
-    height: auto;
+.home-image-container svg {
+  width: 100%;
+  height: auto;
 }
