--- a/frontend-web/src/pages/Home/style.css
+++ b/frontend-web/src/pages/Home/style.css
@@ -53,7 +53,7 @@
   }
 
   .home-container button {
-    width: 500;
+    width: 500px;
   }
 
   .home-content-container h1 {
@@ -71,7 +71,6 @@
   }
 
   @media (min-width: 768px) {
-
     .home-container {
       font-size: 45px;
       padding: 25px;
@@ -89,7 +88,6 @@
     .home-container {
       font-size: 55px;
       padding: 45px;
-      
     }
 
     .home-content-container {
@@ -108,6 +106,30 @@
 
     .home-image-container {
       padding: 130px 20px;
+    }
+  }
+
+  @media (min-width: 1200px) {
+    .home-card {
+      flex-direction: row;
+    }
+
+    .home-content-container {
+      flex-flow: wrap;
+      align-items: flex-start;
+      text-align: left;
+      align-content: space-between;
+      padding: 100px 20px;
+    }
+
+    .home-image-container {
+      display: flex;
+      padding: 20px;
+      align-items: center;
+    }
+
+    .home-image-container svg {
+      width: 100%;
     }
   }
 }
