--- a/frontend-web/src/pages/Home/style.css
+++ b/frontend-web/src/pages/Home/style.css
@@ -2,21 +2,18 @@
   text-align: center;
   padding: 12px;
   font-size: 18px;
-  border: 1px solid blue;
 }
 
 .home-card {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 25);
   border-radius: 20px;
   background-color: #ffffff;
-  border: 1px solid red;
 
   display: flex;
   flex-direction: column-reverse;
 }
 
 .home-content-container {
-  border: 1px solid blueviolet;
   padding: 10px 10px 58px 10px;
   display: flex;
   flex-direction: column;
@@ -38,7 +35,6 @@
 
 .home-image-container {
   padding: 50 15px;
-  border: 1px solid brown;
 }
 
 .home-image-container svg {
@@ -112,6 +108,8 @@
   @media (min-width: 1200px) {
     .home-card {
       flex-direction: row;
+      justify-content: space-around;
+      padding: calc(((85vh - 480px) / 2) - 20px) 0px;
     }
 
     .home-content-container {
@@ -119,7 +117,9 @@
       align-items: flex-start;
       text-align: left;
       align-content: space-between;
-      padding: 100px 20px;
+      padding: 20px;
+      height: 480px;
+      width: 700px;
     }
 
     .home-image-container {
@@ -130,6 +130,12 @@
 
     .home-image-container svg {
       width: 100%;
+    }
+  }
+
+  @media (min-width: 1400px) {
+    .home-image-container svg {
+      width: 500px;
     }
   }
 }
