--- a/frontend-web/src/App.css
+++ b/frontend-web/src/App.css
@@ -12,3 +12,13 @@ a,a:hover {
   color: unset;
   text-decoration: none;
 }
+
+.base-card{
+
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 25);
+  border-radius: 10px;
+  background-color: #ffffff;
+
+
+
+}
