--- a/frontend-web/src/components/Navbar/style.css
+++ b/frontend-web/src/components/Navbar/style.css
@@ -1,39 +1,34 @@
 .nav-text-logo {
-    color: #FFF;
+  color: #fff;
+  text-decoration: none;
 }
 
-.nav-text-logo:hover{
-    color: #FFF;
+.nav-text-logo:hover {
+  color: #fff;
 }
 
-.main-menu{
-    width: 378px;
-    font-size: 18px;
-    display: flex;
-    justify-content: space-between;
+.main-menu {
+  width: 378px;
+  font-size: 18px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.main-menu a{
-    color: rgba(255, 255, 255, 0.5);
+.main-menu a {
+  color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
 }
 
-.main-menu a.current{
-    color:  #FFF;
-    font-weight: 600;
+.main-menu a.current {
+  color: #fff;
+  font-weight: 600;
 }
 
-.main-menu a:hover{
-    color: #FFF;
+.main-menu a:hover {
+  color: #fff;
 }
 
-
-
-.main-nav{
-    padding-left: 40px;
-    min-height: 70px;
+.main-nav {
+  padding-left: 40px;
+  min-height: 70px;
 }
-
-
-
-
-
