--- a/frontend-web/src/pages/ProductDetails/style.css
+++ b/frontend-web/src/pages/ProductDetails/style.css
@@ -1,18 +1,16 @@
 .product-details-container {
   font-size: 24px;
-  border: 1px solid orange;
   padding: 15px;
 }
 
 .product-details-card {
-  border: 1px solid orange;
   padding: 15px;
 }
 
 .return-container {
-  border: 1px solid orange;
   display: flex;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .return-container svg {
@@ -26,4 +24,95 @@
   letter-spacing: -0.015em;
   color: #263238;
   text-transform: uppercase;
+}
+.product-image-container {
+  text-align: center;
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid #e1e1e1;
+  border-radius: 20px;
+}
+
+.product-image-container img {
+  width: 85%;
+}
+
+.product-name-price-container {
+  margin-bottom: 20px;
+}
+
+.product-name-price-container h1 {
+  font-size: 1.1em;
+  letter-spacing: -0.015em;
+  color: #263238;
+}
+
+.product-text-description-container {
+  padding: 10px;
+  border: 1px solid #e1e1e1;
+  border-radius: 20px;
+}
+
+.product-text-description-container h2 {
+  font-size: 0.75em;
+  letter-spacing: -0.015em;
+  color: #9e9e9e;
+  margin-bottom: 20px;
+}
+
+.product-text-description-container p {
+  font-size: 0.55em;
+  letter-spacing: -0.015em;
+  color: #9e9e9e;
+}
+@media (min-width: 576px) {
+  .product-details-container {
+    font-size: 32px;
+    padding: 20px;
+  }
+  .product-details-card {
+    padding: 20px;
+  }
+}
+
+@media (min-width: 960px) {
+  .product-details-container {
+    padding: 40px;
+  }
+  .product-details-card {
+    padding: 40px;
+  }
+  .product-image-container img {
+    width: 45%;
+  }
+  .product-text-description-container {
+    padding: 35px;
+  }
+  .product-name-price-container {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 1200px) {
+  .product-name-price-container {
+    display: block;
+  }
+  .product-image-container img {
+    width: auto;
+    height: 280px;
+  }
+  .product-text-description-container {
+    min-height: 305px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .product-image-container img {
+    width: auto;
+    height: 480px;
+  }
+  .product-text-description-container {
+    min-height: 505px;
+  }
 }
