--- a/frontend-web/src/App.css
+++ b/frontend-web/src/App.css
@@ -18,7 +18,8 @@ a,a:hover {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 25);
   border-radius: 10px;
   background-color: #ffffff;
+}
 
-
-
+Link{
+  text-decoration: none;
 }
