--- a/frontend-web/src/pages/Admin/Auth/style.css
+++ b/frontend-web/src/pages/Admin/Auth/style.css
@@ -2,17 +2,14 @@
   display: flex;
   justify-content: space-around;
   padding: 20px;
-  border: 1px solid blue;
 }
 
 .auth-banner-container {
   display: none;
-  border: 1px solid purple;
 }
 
 .auth-form-container {
   width: 100%;
-  border: 1px solid orange;
 }
 
 @media (min-width: 576px) {
@@ -27,8 +24,46 @@
   }
 }
 @media (min-width: 1200px) {
+  .auth-container {
+    padding: 40px;
+  }
+
   .auth-banner-container {
     display: flex;
     flex-direction: column;
+    margin-top: 35px;
+    width: 500px;
+  }
+
+  .auth-banner-container h1 {
+    font-size: 40px;
+    line-height: 75px;
+    letter-spacing: -0.015em;
+    margin-bottom: 17px;
+  }
+
+  .auth-banner-container p {
+    font-size: 20px;
+    line-height: 33px;
+    letter-spacing: -0.015em;
+    color: #9e9e9e;
+  }
+  .auth-banner-container svg {
+    width: 100%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .auth-banner-container {
+    width: 600px;
+  }
+
+  .auth-banner-container h1 {
+    font-size: 55px;
+    margin-bottom: 26px;
+  }
+
+  .auth-banner-container p {
+    font-size: 24px;
   }
 }
