--- a/frontend-web/src/App.css
+++ b/frontend-web/src/App.css
@@ -3,23 +3,36 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: bold;
   margin-bottom: 0;
 }
 
-a,a:hover {
+a,
+a:hover {
   color: unset;
   text-decoration: none;
 }
 
-.base-card{
-
+.base-card {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 25);
   border-radius: 10px;
-  background-color: #ffffff;
+  background-color: #ffffffff;
 }
 
-Link{
-  text-decoration: none;
+.base-input {
+  font-size: 1em;
+  letter-spacing: -0.015em;
+  height: 50px;
+  border-radius: 10px;
+  color: #26323838;
+}
+
+.base-input::placeholder {
+  color: #9e9e9e;
 }
