--- a/frontend-web/src/components/ButtonIcon/style.css
+++ b/frontend-web/src/components/ButtonIcon/style.css
@@ -3,7 +3,7 @@
 }
 
 .btn-container button {
-  width: 100%;
+  width: calc(100% - 50px);
   border-radius: 10px 0px 0px 10px;
 }
 
@@ -31,5 +31,8 @@ btn h5 {
   .btn-icon-container {
     height: 70px;
     width: 70px;
+  }
+  .btn-container button {
+    width: calc(100% - 70px);
   }
 }
