--- a/frontend-web/src/pages/Admin/Auth/Login/style.css
+++ b/frontend-web/src/pages/Admin/Auth/Login/style.css
@@ -47,3 +47,9 @@
   text-align: center;
   margin-bottom: 30px;
 }
+@media (min-width: 576px) {
+  .login-card {
+    padding: 40px;
+    height: 580px;
+  }
+}
