React Hoook Form Library Added to Project and Implemented at /admin/auth/login Sub-Route

--- a/frontend-web/src/pages/Admin/Auth/Login/style.css
+++ b/frontend-web/src/pages/Admin/Auth/Login/style.css
@@ -52,4 +52,10 @@
     padding: 40px;
     height: 580px;
   }
+
+  @media (min-width: 1200px) {
+    .login-card {
+      height: 640px;
+    }
+  }
 }
