--- a/frontend-web/src/pages/Admin/Products/ProductCardCRUD/style.css
+++ b/frontend-web/src/pages/Admin/Products/ProductCardCRUD/style.css
@@ -1,4 +1,5 @@
 .product-crud-card {
+  padding-bottom: 20px;
   margin-bottom: 30px;
 }
 
@@ -18,10 +19,29 @@
 }
 
 .product-crud-card-content-container h6 {
-  color: #263238;
   font-size: 18px;
+  color: #263238;
 }
 .product-crud-categories-container {
   display: flex;
+  flex-wrap: wrap;
   padding: 0px 20px;
+}
+
+.product-crud-card-buttons-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 20px;
+}
+
+.product-crud-card-button {
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: -0.015em;
+  height: 40px;
+  width: 110px;
+  border-radius: 10px;
+}
+.product-crud-card-button-first {
+  margin-right: 10px;
 }
