--- a/frontend-web/src/pages/Admin/Products/ProductCardCRUD/style.css
+++ b/frontend-web/src/pages/Admin/Products/ProductCardCRUD/style.css
@@ -45,3 +45,40 @@
 .product-crud-card-button-first {
   margin-right: 10px;
 }
+
+@media (min-width: 768px) {
+  .product-crud-card {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 0px;
+  }
+
+  .product-crud-card-image-container {
+    border-bottom: 1px solid #e1e1e1e1;
+    border-bottom: 0;
+  }
+
+  .product-crud-card-buttons-container {
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+  .product-crud-card-button-first {
+    margin-top: 22px;
+    margin-right: 0px;
+  }
+  .product-crud-card-button {
+    width: 140px;
+  }
+  .product-crud-card-description-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1;
+  }
+}
+
+@media (min-width: 992px) {
+  .product-crud-card-button {
+    width: 220px;
+  }
+}
