--- a/frontend-web/src/pages/Admin/Products/Form/style.css
+++ b/frontend-web/src/pages/Admin/Products/Form/style.css
@@ -4,8 +4,32 @@
 
 .product-crud-form-title {
   font-size: 22px;
+  color: #263238;
   font-weight: bold;
   line-height: 30px;
   letter-spacing: -0.015em;
-  color: #263238;
+  margin-bottom: 30px;
+}
+
+.margin-bottom-30 {
+  margin-bottom: 30px;
+}
+
+.product-crud-inputs-container {
+  margin-bottom: 30px;
+}
+
+.product-crud-inputs-left-container {
+  margin-bottom: 30px;
+}
+
+.product-crud-buttons-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (min-width: 992px) {
+  .product-crud-inputs-left-container {
+    margin-bottom: 0px;
+  }
 }
