--- a/frontend-web/src/pages/Admin/Products/Form/style.css
+++ b/frontend-web/src/pages/Admin/Products/Form/style.css
@@ -28,6 +28,24 @@
   justify-content: space-between;
 }
 
+.product-crud-button {
+  font-weight: bold;
+  height: 50px;
+  width: 110px;
+  border-radius: 10px;
+}
+
+@media (min-width: 576px) {
+  .product-crud-buttons-container {
+    justify-content: flex-end;
+  }
+
+  .product-crud-button {
+    width: 270px;
+    margin-left: 30px;
+  }
+}
+
 @media (min-width: 992px) {
   .product-crud-inputs-left-container {
     margin-bottom: 0px;
