--- a/frontend-web/src/pages/Admin/Products/Form/style.css
+++ b/frontend-web/src/pages/Admin/Products/Form/style.css
@@ -35,6 +35,22 @@
   border-radius: 10px;
 }
 
+.product-crud-select__control {
+  font-size: 1em;
+  letter-spacing: -0.015em;
+  height: 50px;
+  border-radius: 10px !important;
+  color: #26323838;
+}
+
+.product-crud-select__placeholder {
+  color: #9e9e9e !important;
+}
+
+.product-crud-select__indicator-separator {
+  display: none;
+}
+
 @media (min-width: 576px) {
   .product-crud-buttons-container {
     justify-content: flex-end;
