--- a/frontend-web/src/App.css
+++ b/frontend-web/src/App.css
@@ -19,6 +19,12 @@ a:hover {
   text-decoration: none;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+}
+
 .base-card {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 25);
   border-radius: 10px;
