--- a/frontend-web/src/components/ProductFilter/style.css
+++ b/frontend-web/src/components/ProductFilter/style.css
@@ -6,6 +6,7 @@
 .product-filter-name-container {
   display: flex;
   align-items: center;
+  margin-bottom: 15px;
   border-bottom: 1px solid #e1e1e1e1;
 }
 
@@ -19,6 +20,51 @@
 
 .product-filter-name-container input::placeholder {
   color: #9e9e9e;
+}
+
+.product-filter-search-icon {
+  background-color: unset;
+  border: none;
+}
+
+.product-filter-bottom-container {
+  display: flex;
+}
+
+.product-filter-category-container {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.btn-product-filter-expression {
+  display: none;
+}
+
+.btn-product-filter-clean {
+  font-weight: bold;
+  border-radius: 10px;
+}
+
+.product-filter-select__control {
+  font-size: 1em;
+  color: #263238;
+  letter-spacing: -0.015em;
+  border: none !important;
+  border-bottom: 1px solid #e1e1e1 !important;
+}
+
+.product-filter-select__placeholder {
+  color: #9e9e9e !important;
+}
+
+.product-filter-select__indicator-separator {
+  display: none;
+}
+
+@media (min-width: 576px) {
+  .btn-product-filter-expression {
+    display: unset;
+  }
 }
 
 @media (min-width: 768px) {
