--- a/frontend-web/src/pages/Admin/Products/Form/style.css
+++ b/frontend-web/src/pages/Admin/Products/Form/style.css
@@ -40,7 +40,7 @@
   letter-spacing: -0.015em;
   height: 50px;
   border-radius: 10px !important;
-  color: #26323838;
+  color: #263238;
 }
 
 .product-crud-select__placeholder {
